--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,1 @@
-<p class="h4" style="color: #563d7c;">Our barbershop is ToP4iK</p>
+<p class="h4" style="color: #563d7c">Our barbershop is ToP4iK</p>
