--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,15 @@
-<p class="h4" style="color: #563d7c">Our barbershop is ToP4iK</p>
+<head>
+  <style>
+    h1 {font-family:fantasy;
+      color: #563d7c;
+      text-align: center;
+      font-weight: bold;
+      margin-top: 50px;
+      margin-bottom: 40px;}
+  </style>
+</head>
+
+<body>
+  <h1>Our barbershop is ToP4iK</h1>
+</body>
+
