--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,1 +1,14 @@
-<p class="h4" style="color: #563d7c">Our phone number: 56432194</p>
+<head>
+  <style>
+    h1 {font-family:fantasy;
+      color: #563d7c;
+      text-align: center;
+      font-weight: bold;
+      margin-top: 50px;
+      margin-bottom: 40px;}
+  </style>
+</head>
+
+<body>
+  <h1>Our phone number: 56432194</h1>
+</body>
