--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,14 @@
-<h1>Admin panel: </h1>
+<head>
+  <style>
+    h1 {font-family:fantasy;
+      color: #563d7c;
+      text-align: center;
+      font-weight: bold;
+      margin-top: 50px;
+      margin-bottom: 40px;}
+  </style>
+</head>
+
+<body>
+  <h1>Admin panel: </h1>
+</body>
