--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,70 +1,94 @@
-<table class="table table-hover">
-  <thead style="background-color: #ffc823; color: #563d7c">
-  <tr>
-    <th scope="col">Day</th>
-    <th scope="col">Open Time</th>
-  </tr>
-  </thead>
-  <tbody style="color: #563d7c">
-  <tr>
-    <th scope="row">Monday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Tuesday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Wednesday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Thursday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Friday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Saturday</th>
-    <td>10:00-17:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Sunday</th>
-    <td>10:00-17:00</td>
-  </tr>
-  </tbody>
-</table>
+<head>
+  <style>
+    h1 {font-family:fantasy;
+      color: #563d7c;
+      text-align: center;
+      font-weight: bold;
+      margin-top: 50px;
+      margin-bottom: 40px;}
+  </style>
+</head>
 
-<form>
-  <div class="form-row">
-    <div class="col-md-4 mb-3" style="width:300px;">
-      <label style="color: #563d7c; font-weight: bold;">First name</label>
-      <input type="text" class="form-control" placeholder="First name">
+<body>
+  <h1>Haircut sessions</h1>
+
+  <table class="table table-hover">
+    <thead style="background-color: #ffc823; color: #563d7c">
+    <tr>
+      <th scope="col">Day</th>
+      <th scope="col">Open Time</th>
+    </tr>
+    </thead>
+    <tbody style="color: #563d7c">
+    <tr>
+      <th scope="row">Monday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Tuesday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Wednesday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Thursday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Friday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Saturday</th>
+      <td>10:00-17:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Sunday</th>
+      <td>10:00-17:00</td>
+    </tr>
+    </tbody>
+  </table>
+
+  <form>
+    <div class="row" style="margin-left: 10px; color: #563d7c">
+
+      <div class="form-group" style="width:300px">
+        <label>First name</label>
+        <input type="text" class="form-control" placeholder="First name">
+      </div>
+
+      <div class="form-group" style="width:300px">
+        <label>Last name</label>
+        <input type="text" class="form-control" placeholder="Last name">
+      </div>
+
     </div>
-    <div class="col-md-4 mb-3" style="width:300px;">
-      <label style="color: #563d7c; font-weight: bold; width:300px;">Last name</label>
-      <input type="text" class="form-control" placeholder="Last name">
+
+    <div class="row" style="margin-left: 10px; color: #563d7c">
+      <div class="form-group">
+        <label>Дата записи</label>
+        <input type="date" class="form-control" style="width:150px" placeholder="Дата и время записи">
+      </div>
+
+      <div class="form-group">
+        <label>Время записи</label>
+        <input type="time" class="form-control" style="width:150px" placeholder="Дата и время записи">
+      </div>
     </div>
-  </div>
-</form>
 
-<form>
-  <div class="form-row">
-    <label style="color: #563d7c; font-weight: bold;">Дата записи</label>
-    <input type="date" class="form-control" style="width:150px" placeholder="Дата и время записи">
-    <label style="color: #563d7c; font-weight: bold;">Время записи</label>
-    <input type="time" class="form-control" style="width:150px" placeholder="Дата и время записи">
-  </div>
+    <div class="row" style="margin-left: 10px; color: #563d7c; width:150px">
+      <div class="form-group">
+        <label>Выберите мастера</label>
+        <select class="form-control">
+          <option>Leonardo</option>
+          <option>Michael</option>
+          <option>Dante</option>
+        </select>
+      </div>
 
-  <div class="form-row">
-    <label style="color: #563d7c; font-weight: bold;">Выберите мастера</label>
-    <select class="form-control" id="exampleFormControlSelect1" style="width:150px; color: #563d7c">
-      <option>Leonardo</option>
-      <option>Michael</option>
-      <option>Dante</option>
-    </select>
-  </div>
-  <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold;">Записаться</button>
-</form>
+      <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold;">Записаться</button>
+    </div>
+  </form>
+</body>
