--- a/views/main.erb
+++ b/views/main.erb
@@ -1,39 +1,53 @@
-<h1 style="color: #563d7c; text-align: center; margin-top: 50px; margin-bottom: 40px;">Welcome to our barbershop!</h1>
-<table class="table table-hover">
-  <thead style="background-color: #ffc823; color: #563d7c">
-  <tr>
-    <th scope="col">Day</th>
-    <th scope="col">Open Time</th>
-  </tr>
-  </thead>
-  <tbody style="color: #563d7c">
-  <tr>
-    <th scope="row">Monday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Tuesday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Wednesday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Thursday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Friday</th>
-    <td>10:00-18:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Saturday</th>
-    <td>10:00-17:00</td>
-  </tr>
-  <tr>
-    <th scope="row">Sunday</th>
-    <td>10:00-17:00</td>
-  </tr>
-  </tbody>
-</table>
+<head>
+  <style>
+    h1 {font-family:fantasy;
+      color: #563d7c;
+      text-align: center;
+      font-weight: bold;
+      margin-top: 50px;
+      margin-bottom: 40px;}
+  </style>
+</head>
+
+<body>
+  <h1>Welcome to our barbershop!</h1>
+
+  <table class="table table-hover">
+    <thead style="background-color: #ffc823; color: #563d7c">
+    <tr>
+      <th scope="col">Day</th>
+      <th scope="col">Open Time</th>
+    </tr>
+    </thead>
+    <tbody style="color: #563d7c">
+    <tr>
+      <th scope="row">Monday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Tuesday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Wednesday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Thursday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Friday</th>
+      <td>10:00-18:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Saturday</th>
+      <td>10:00-17:00</td>
+    </tr>
+    <tr>
+      <th scope="row">Sunday</th>
+      <td>10:00-17:00</td>
+    </tr>
+    </tbody>
+  </table>
+</body>
