Add form on 'Contacts' page

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -56,12 +56,12 @@
 
       <div class="form-group" style="width:300px">
         <label>First name</label>
-        <input type="text" class="form-control" placeholder="First name">
+        <input name="first_name" type="text" class="form-control" placeholder="First name">
       </div>
 
       <div class="form-group" style="width:300px">
         <label>Last name</label>
-        <input type="text" class="form-control" placeholder="Last name">
+        <input name="last_name" type="text" class="form-control" placeholder="Last name">
       </div>
 
     </div>
@@ -88,7 +88,7 @@
         </select>
       </div>
 
-      <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold;">Записаться</button>
+      <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold; border-color: #563d7c">Confirm</button>
     </div>
   </form>
 </body>
