--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -10,5 +10,21 @@
 </head>
 
 <body>
-  <h1>Our phone number: 56432194</h1>
+  <h1>Contact with us</h1>
+
+  <form>
+    <div class="row" style="margin-left: 10px; color: #563d7c">
+      <div class="form-group" style="width:300px">
+        <label>Email</label>
+        <input name="email" type="text" class="form-control" placeholder="Email">
+      </div>
+
+      <div class="form-group" style="width:300px">
+        <label>Message</label>
+        <textarea name="message" type="text" class="form-control" placeholder="Enter your message" style="width: 600px; height: 200px"></textarea>
+      </div>
+
+      <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold; width: 120px; height: 34px; border-color: #563d7c">Send</button>
+    </div>
+  </form>
 </body>
