Added "Login" area

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -33,6 +33,7 @@
 			      <li><a href="/about" style="color: #ffc823;">About</a></li>
 						<li><a href="/visit" style="color: #ffc823;">Visit</a></li>
 			      <li><a href="/contacts" style="color: #ffc823;">Contacts</a></li>
+						<li><a href="/login" style="color: #ffc823;">LogIn</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
