--- a/views/visit.erb
+++ b/views/visit.erb
@@ -7,6 +7,7 @@
       margin-top: 50px;
       margin-bottom: 40px;}
   </style>
+  <script type="text/javascript" src="/script.js"></script>
 </head>
 
 <body>
@@ -81,7 +82,7 @@
     <div class="row" style="margin-left: 10px; color: #563d7c; width:150px">
       <div class="form-group">
         <label>Выберите мастера</label>
-        <select class="form-control" name="master">
+        <select name="barber" class="form-control">
           <option>Leonardo</option>
           <option>Michael</option>
           <option>Dante</option>
