--- a/views/visit_confirm.erb
+++ b/views/visit_confirm.erb
@@ -7,8 +7,10 @@
       margin-top: 50px;
       margin-bottom: 40px;}
   </style>
+
+  <script type="text/javascript">$('aa').css('background_color', "red");</script>
 </head>
 
 <body>
-<h1>You have successfully recorded!</h1>
+<h1 id="aa">You have successfully recorded!</h1>
 </body>
