--- a/views/visit.erb
+++ b/views/visit.erb
@@ -7,7 +7,10 @@
       margin-top: 50px;
       margin-bottom: 40px;}
   </style>
-  <script type="text/javascript" src="/script.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
+  <script src="jquery.simplecolorpicker.js"></script>
+
+  <link rel="stylesheet" href="jquery.simplecolorpicker.css">
 </head>
 
 <body>
@@ -91,5 +94,25 @@
 
       <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold; border-color: #563d7c">Confirm</button>
     </div>
+
+    <select id="color_pick">
+      <option value="#7bd148">Green</option>
+      <option value="#5484ed">Bold blue</option>
+      <option value="#a4bdfc">Blue</option>
+      <option value="#46d6db">Turquoise</option>
+      <option value="#7ae7bf">Light green</option>
+      <option value="#51b749">Bold green</option>
+      <option value="#fbd75b">Yellow</option>
+      <option value="#ffb878">Orange</option>
+      <option value="#ff887c">Red</option>
+      <option value="#dc2127">Bold red</option>
+      <option value="#dbadff">Purple</option>
+      <option value="#e1e1e1">Gray</option>
+    </select>
   </form>
+
+  <script type="text/javascript" src="/script.js"></script>
+
+  $('#color_pick').simplecolorpicker();
+
 </body>
