--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,26 +3,20 @@
 	<head>
 		<title>Barbershop</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Bootstrap -->
+
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 
-		<![endif]-->
-    <script src="/vendor/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/vendor/jquery-3.3.1.min.js"></script>
 
-    <script src="jquery.simplecolorpicker.js"></script>
+    <script type="text/javascript" src="jquery.simplecolorpicker.js"></script>
 
     <link rel="stylesheet" href="jquery.simplecolorpicker.css">
 	</head>
 	<body>
 		<div class="container">
-
-			<!-- Static navbar -->
 
 			<nav class="navbar navbar-light" style="background-color: #563d7c;">
 			  <div class="navbar-header">
@@ -41,7 +35,7 @@
 			      <li><a href="/contacts" style="color: #ffc823;">Contacts</a></li>
 						<li><a href="/login" style="color: #ffc823;">LogIn</a></li>
 			    </ul>
-			  </div><!--/.nav-collapse -->
+			  </div>
 			</nav>
 
 			<div>
@@ -50,7 +44,6 @@
 			      <% end %>
 			      <%= yield %>
 			</div>
-
 	</div>
   </body>
 </html>
