--- a/views/visit.erb
+++ b/views/visit.erb
@@ -7,6 +7,12 @@
       margin-top: 50px;
       margin-bottom: 40px;}
   </style>
+
+  <script type="text/javascript">
+      $(function(){
+          $('#colorpicker').simplecolorpicker();
+      });
+  </script>
 </head>
 
 <body>
@@ -56,12 +62,12 @@
 
       <div class="form-group" style="width:300px">
         <label>First name</label>
-        <input name="first_name" type="text" class="form-control" placeholder="First name">
+        <input name="first_name" type="text" class="form-control" placeholder="First name" value="<%=@first_name%>">
       </div>
 
       <div class="form-group" style="width:300px">
         <label>Last name</label>
-        <input name="last_name" type="text" class="form-control" placeholder="Last name">
+        <input name="last_name" type="text" class="form-control" placeholder="Last name" value="<%=@last_name%>">
       </div>
 
     </div>
@@ -69,19 +75,19 @@
     <div class="row" style="margin-left: 10px; color: #563d7c">
       <div class="form-group">
         <label>Дата записи</label>
-        <input type="date" class="form-control" name="user_data" style="width:150px" placeholder="Дата и время записи">
+        <input type="date" class="form-control" name="user_data" style="width:150px" placeholder="Дата и время записи" value="<%=@user_data%>">
       </div>
 
       <div class="form-group">
         <label>Время записи</label>
-        <input type="time" class="form-control" name="user_time" style="width:150px" placeholder="Дата и время записи">
+        <input type="time" class="form-control" name="user_time" style="width:150px" placeholder="Дата и время записи" value="<%=@user_time%>">
       </div>
     </div>
 
     <div class="row" style="margin-left: 10px; color: #563d7c; width:150px">
       <div class="form-group">
         <label>Выберите мастера</label>
-        <select name="barber" class="form-control">
+        <select name="barber" class="form-control" value="<%=@master%>">
           <option>Leonardo</option>
           <option>Michael</option>
           <option>Dante</option>
@@ -90,7 +96,7 @@
 
       <div class="form-group">
         <label>Choice hair color:</label>
-        <select id="colorpicker" name="colorpicker">
+        <select id="colorpicker" name="colorpicker" value="<%=@colorpicker%>">
           <option value="#7bd148">Green</option>
           <option value="#5484ed">Bold blue</option>
           <option value="#a4bdfc">Blue</option>
@@ -108,10 +114,5 @@
 
       <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold; border-color: #563d7c">Confirm</button>
     </div>
-
   </form>
-
-  <script type="text/javascript">
-      $('#colorpicker').simplecolorpicker();
-  </script>
 </body>
