--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,16 +4,18 @@
 		<title>Barbershop</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 
+    <!-- jQuery -->
     <script type="text/javascript" src="/vendor/jquery-3.3.1.min.js"></script>
 
-    <script type="text/javascript" src="jquery.simplecolorpicker.js"></script>
-
+    <!-- Simplecolorpicker -->
     <link rel="stylesheet" href="jquery.simplecolorpicker.css">
+    <script type="text/javascript" src="jquery.simplecolorpicker.js"></script>
 	</head>
 	<body>
 		<div class="container">
