--- a/views/visit.erb
+++ b/views/visit.erb
@@ -75,7 +75,7 @@
     <div class="row" style="margin-left: 10px; color: #563d7c">
       <div class="form-group">
         <label>Дата записи</label>
-        <input type="date" class="form-control" name="user_data" style="width:150px" placeholder="Дата и время записи" value="<%= @user_data %>">
+        <input type="date" class="form-control" name="user_date" style="width:150px" placeholder="Дата и время записи" value="<%= @user_date %>">
       </div>
 
       <div class="form-group">
