--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,17 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- jQuery -->
-    <script type="text/javascript" src="/vendor/jquery-3.3.1.min.js"></script>
+    <script src="vendor/jquery-3.3.1.min.js"></script>
+
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Simplecolorpicker -->
+    <script src="jquery.simplecolorpicker.js"></script>
     <link rel="stylesheet" href="jquery.simplecolorpicker.css">
-    <script type="text/javascript" src="jquery.simplecolorpicker.js"></script>
+
+    <!-- Datetimepicker -->
+    <script src="jquery.datetimepicker.js"></script>
+    <link rel="stylesheet" href="jquery.datetimepicker.css">
 	</head>
 	<body>
 		<div class="container">
