--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,4 +1,4 @@
-<head>
+
   <style>
     h1 {font-family:fantasy;
       color: #563d7c;
@@ -11,11 +11,10 @@
   <script type="text/javascript">
       $(function(){
           $('#colorpicker').simplecolorpicker();
+          $('#datetimepicker').datetimepicker();
       });
   </script>
-</head>
 
-<body>
   <h1>Haircut sessions</h1>
 
   <table class="table table-hover">
@@ -75,12 +74,7 @@
     <div class="row" style="margin-left: 10px; color: #563d7c">
       <div class="form-group">
         <label>Дата записи</label>
-        <input type="date" class="form-control" name="user_date" style="width:150px" placeholder="Дата и время записи" value="<%= @user_date %>">
-      </div>
-
-      <div class="form-group">
-        <label>Время записи</label>
-        <input type="time" class="form-control" name="user_time" style="width:150px" placeholder="Дата и время записи" value="<%= @user_time %>">
+        <input id="datetimepicker" type="text" class="form-control" name="user_datetime" style="width:150px" placeholder="Дата и время записи" value="<%= @user_datetime %>">
       </div>
     </div>
 
@@ -115,4 +109,3 @@
       <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold; border-color: #563d7c">Confirm</button>
     </div>
   </form>
-</body>
