--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,24 +5,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- jQuery -->
-    <script src="vendor/jquery-3.3.1.min.js"></script>
+    <script src="/vendor/jquery-3.3.1.min.js"></script>
 
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Simplecolorpicker -->
-    <script src="jquery.simplecolorpicker.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
+		<script src="jquery.simplecolorpicker.js"></script>
     <link rel="stylesheet" href="jquery.simplecolorpicker.css">
 
     <!-- Datetimepicker -->
-    <script src="jquery.datetimepicker.js"></script>
+    <script src="jquery.datetimepicker.full.js"></script>
     <link rel="stylesheet" href="jquery.datetimepicker.css">
+
 	</head>
 	<body>
 		<div class="container">
-
 			<nav class="navbar navbar-light" style="background-color: #563d7c;">
 			  <div class="navbar-header">
 			    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
