--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,4 +1,4 @@
-
+<head>
   <style>
     h1 {font-family:fantasy;
       color: #563d7c;
@@ -7,10 +7,10 @@
       margin-top: 50px;
       margin-bottom: 40px;}
   </style>
-
-  <script type="text/javascript">
-      $(function(){
-          $('#colorpicker').simplecolorpicker();
+</head>
+<body>
+  <script>
+      $(document).ready(function(){
           $('#datetimepicker').datetimepicker();
       });
   </script>
@@ -109,3 +109,4 @@
       <button type="submit" class="btn btn-warning" style="background-color: #ffc823; color: #563d7c; font-weight: bold; border-color: #563d7c">Confirm</button>
     </div>
   </form>
+</body>
