--- a/views/visit.erb
+++ b/views/visit.erb
@@ -91,6 +91,7 @@
       <div class="form-group">
         <label>Choice hair color:</label>
         <select id="colorpicker" name="colorpicker" value="<%= @colorpicker %>">
+          <option value="-">No need</option>
           <option value="#7bd148">Green</option>
           <option value="#5484ed">Bold blue</option>
           <option value="#a4bdfc">Blue</option>
