Remove input velues

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -61,12 +61,12 @@
 
       <div class="form-group" style="width:300px">
         <label>First name</label>
-        <input name="first_name" type="text" class="form-control" placeholder="First name" value="<%= @first_name %>">
+        <input name="first_name" type="text" class="form-control" placeholder="First name">
       </div>
 
       <div class="form-group" style="width:300px">
         <label>Last name</label>
-        <input name="last_name" type="text" class="form-control" placeholder="Last name" value="<%= @last_name %>">
+        <input name="last_name" type="text" class="form-control" placeholder="Last name">
       </div>
 
     </div>
@@ -74,7 +74,7 @@
     <div class="row" style="margin-left: 10px; color: #563d7c">
       <div class="form-group">
         <label>Дата записи</label>
-        <input id="datetimepicker" type="text" class="form-control" name="user_datetime" style="width:150px" placeholder="Дата и время записи" value="<%= @user_datetime %>">
+        <input id="datetimepicker" type="text" class="form-control" name="user_datetime" style="width:150px" placeholder="Дата и время записи">
       </div>
     </div>
 
@@ -90,7 +90,7 @@
 
       <div class="form-group">
         <label>Choice hair color:</label>
-        <select id="colorpicker" name="colorpicker" value="<%= @colorpicker %>">
+        <select id="colorpicker" name="colorpicker">
           <option value="-">No need</option>
           <option value="#7bd148">Green</option>
           <option value="#5484ed">Bold blue</option>
